<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaf4f4"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        >
        <ImageView
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:src="@drawable/logo_app"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tvLoginHi"
            android:textSize="20dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wemiss"
            android:textSize="15dp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="USER NAME"
            android:textSize="12sp"
            android:textColor="#E92C0C"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="userabc"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="5dp"
            android:background="@drawable/edttext_design"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/password"
            android:textSize="12sp"
            android:textColor="#E92C0C"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordhint"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edttext_design"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/visibility_off"
            android:longClickable="false"
            />

        <CheckBox
            android:id="@+id/showpass"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="30dp"
            android:text="Show password"/>

        <CheckBox
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_marginTop="-30dp"
            android:layout_marginStart="200dp"
            android:layout_height="30dp"
            android:text="Remember me"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:backgroundTint="#62929e"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textAllCaps="false"
            android:backgroundTint="#62929e"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/orwith"
            android:layout_marginLeft="100dp"
            android:textSize="12sp"

            android:textColor="#E92C0C"
            android:layout_marginTop="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/donthaveaccount"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/registerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registernow"
            android:layout_marginTop="5dp"
            android:textColor="@color/link"
            />

    </LinearLayout>
</RelativeLayout>